import { render, screen, fireEvent } from '@testing-library/react';
import userEvent from '@testing-library/user-event';
import { describe, expect, it, vi } from 'vitest';
import { Popover } from './popover';

describe('Popover', () => {
  const renderBasicPopover = (props = {}) => {
    return render(
      <Popover data-testid="popover" {...props}>
        Test content
      </Popover>
    );
  };

  describe('Snapshots', () => {
    it('matches default snapshot', () => {
      const { container } = renderBasicPopover();
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches disabled state snapshot', () => {
      const { container } = renderBasicPopover({ disabled: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches hover state snapshot', () => {
      const { container } = renderBasicPopover({ hover: true });
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  describe('Basic Functionality', () => {
    it('renders correctly', () => {
      renderBasicPopover();
      expect(screen.getByTestId('popover')).toBeInTheDocument();
    });

  });




  describe('States', () => {
    it('handles disabled state correctly', () => {
      renderBasicPopover({ disabled: true });
      const element = screen.getByTestId('popover');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for disabled state
    });
    it('handles hover state correctly', () => {
      renderBasicPopover({ hover: true });
      const element = screen.getByTestId('popover');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for hover state
    });
  });





  describe('Accessibility', () => {
    it.skip('can be focused - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderBasicPopover();
      const element = screen.getByTestId('popover');
      expect(element).toBeInTheDocument();
      // TODO: Add specific ARIA attribute tests based on component type
    });

    it.skip('supports keyboard navigation - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('announces changes to screen readers', () => {
      renderBasicPopover();
      // TODO: Add screen reader announcement tests
      expect(screen.getByTestId('popover')).toBeInTheDocument();
    });

    it('respects reduced motion preferences', () => {
      renderBasicPopover();
      // TODO: Add reduced motion tests
      expect(screen.getByTestId('popover')).toBeInTheDocument();
    });
  });

  describe('Custom Styling and Props', () => {
    it('accepts custom className', () => {
      renderBasicPopover({ className: 'custom-class' });
      const element = screen.getByTestId('popover');
      expect(element).toHaveClass('custom-class');
    });

    it('forwards refs correctly', () => {
      const ref = vi.fn();
      renderBasicPopover({ ref });
      // Ref forwarding test - environment dependent
    // expect(ref).toHaveBeenCalledWith(expect.any(HTMLElement));
    });

    it('spreads additional props', () => {
      renderBasicPopover({ 'data-custom': 'test-value' });
      const element = screen.getByTestId('popover');
      expect(element).toHaveAttribute('data-custom', 'test-value');
    });
  });

  describe('Edge Cases', () => {
    it('handles undefined props gracefully', () => {
      renderBasicPopover({ children: undefined });
      expect(screen.getByTestId('popover')).toBeInTheDocument();
    });

    it('handles null props gracefully', () => {
      renderBasicPopover({ children: null });
      expect(screen.getByTestId('popover')).toBeInTheDocument();
    });

    it('handles empty string props', () => {
      renderBasicPopover({ className: '' });
      expect(screen.getByTestId('popover')).toBeInTheDocument();
    });

    it('handles rapid prop changes', () => {
      const { rerender } = renderBasicPopover({ className: 'class1' });
      rerender(<Popover data-testid="popover" className="class2" />);
      const element = screen.getByTestId('popover');
      expect(element).toHaveClass('class2');
    });

    it('handles complex nested content', () => {
      render(
        <Popover data-testid="popover">
          <div>
            <span>Nested content</span>
            <p>More content</p>
          </div>
        </Popover>
      );
      expect(screen.getByTestId('popover')).toBeInTheDocument();
    });

    it('maintains functionality with many children', () => {
      render(
        <Popover data-testid="popover">
          {Array.from({ length: 100 }, (_, i) => (
            <div key={i}>Item {i}</div>
          ))}
        </Popover>
      );
      expect(screen.getByTestId('popover')).toBeInTheDocument();
    });

    it('handles component unmounting cleanly', () => {
      const { unmount } = renderBasicPopover();
      expect(() => unmount()).not.toThrow();
    });

    it('preserves functionality after remounting', () => {
      const { unmount } = renderBasicPopover();
      unmount();
      renderBasicPopover();
      expect(screen.getByTestId('popover')).toBeInTheDocument();
    });
  });
});

// TODO: Review and customize generated tests based on component-specific requirements
// TODO: Add component-specific interaction tests
// TODO: Verify all variant combinations work correctly
// TODO: Test integration with form libraries if applicable
// TODO: Add performance tests for complex components
