// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popover > Snapshots > matches default snapshot 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4"
  data-testid="popover"
>
  Test content
</button>
`;

exports[`Popover > Snapshots > matches disabled state snapshot 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4"
  data-testid="popover"
  disabled=""
>
  Test content
</button>
`;

exports[`Popover > Snapshots > matches hover state snapshot 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4"
  data-testid="popover"
>
  Test content
</button>
`;
